# file-share

./: Cargo.toml  package.json  we.prodtest.config.json
dna/workdir/: dna.yaml
dna/zomes/delivery/: Cargo.toml
dna/zomes/delivery_integrity/: Cargo.toml
dna/zomes/files/: Cargo.toml
dna/zomes/files/src/: attach_to_hrl.rs  callbacks.rs  get_files.rs  get_private_files_from.rs  get_unreplied_notices.rs  lib.rs  probe_public_files.rs  publish_file_manifest.rs  send_file.rs
dna/zomes/files_integrity/: Cargo.toml
dna/zomes/files_integrity/src/: lib.rs
dna/zomes/path_explorer/: Cargo.toml
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles_integrity/: Cargo.toml
dna/zomes/tagging/: Cargo.toml
dna/zomes/tagging/src/: callbacks.rs  lib.rs  private.rs  public.rs
dna/zomes/tagging_integrity/: Cargo.toml
dna/zomes/tagging_integrity/src/: lib.rs
scripts/: ts-bindings.sh
testdata/: we.prodtest.config.json
we-applet/: package.json  tsconfig.json
we-applet/src/: createFilesApplet.ts  devtest.ts  index.ts
we-applet/src/appletServices/: blockTypes.ts  getAssetInfo.ts  search.ts
webapp/: index.html  rollup.config.js  web-dev-server.config.mjs
webapp/src/: files-app.ts  files-blocks.ts  files-main-page.ts  globals.ts
webapp/src/elements/: files-main-view.ts
webapp/xliff/: fr-fr.xlf
webcomponents/: package.json
webcomponents/src/: fileTypeUtils.ts  toast.ts  utils.ts
webcomponents/src/bindings/: files.fn.ts  files.integrity.ts  files.proxy.ts  files.types.ts  tagging.fn.ts  tagging.integrity.ts  tagging.proxy.ts  tagging.types.ts
webcomponents/src/elements/: action-overlay.ts  activity-timeline.ts  distribution-table.ts  edit-profile.ts  file-button.ts  file-preview.ts  file-table.ts  file-view.ts  filename.ts  files-menu.ts  inbound-stack.ts  inbox.ts  profile-input.ts  profile-item.ts  send-dialog.ts  store-dialog.ts  tag-input.ts  tag-list.ts
webcomponents/src/viewModels/: files.dvm.ts  files.perspective.ts  files.zvm.ts  tagging.perspective.ts  tagging.zvm.ts
webcomponents/xliff/: fr-fr.xlf
