[workspace]
resolver = "2"
members = [
  #"dna/zomes/path_explorer",
  #"dna/zomes/notifications_integrity",
  #"dna/zomes/notifications",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles",
  "dna/zomes/delivery_integrity",
  "dna/zomes/delivery",
  "dna/zomes/files_integrity",
  "dna/zomes/files",
  "dna/zomes/tagging_integrity",
  "dna/zomes/tagging",
  #"sweettest" // Don't add this since cargo sucks at target specific compiliation in workspaces
  ]

[workspace.package]
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[workspace.lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"
ill_formed_attribute_input = "allow"

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.1", default-features = false }
hdk = { version = "=0.3.1", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.1" }
zome_signals = { git = "https://github.com/ddd-mtl/zome-signals", branch = "hdk-3.1" }
path_explorer_types = {git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer_types", branch = "hdk-3.1"}

delivery = {git = "https://github.com/ddd-mtl/delivery-zome", branch = "hdk-3.1" }
zome_delivery_integrity = {git = "https://github.com/ddd-mtl/delivery-zome", branch = "hdk-3.1" }
zome_delivery_types = {git = "https://github.com/ddd-mtl/delivery-zome", package = "zome_delivery_types", branch = "hdk-3.1" }
zome_delivery_api = {git = "https://github.com/ddd-mtl/delivery-zome", package = "zome_delivery_api", branch = "hdk-3.1" }
path_explorer = {git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer", branch = "hdk-3.1"}

hc_zome_profiles_coordinator = {git = "https://github.com/ddd-mtl/profiles_alt_zome", branch = "hdk-3.1", package="profiles_alt_coordinator" }
hc_zome_profiles_integrity = {git = "https://github.com/ddd-mtl/profiles_alt_zome", branch = "hdk-3.1" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
#lto = true
lto = false


[workspace.dependencies.notifications]
path = "dna/zomes/notifications"

[workspace.dependencies.notifications_integrity]
path = "dna/zomes/notifications_integrity"

