[package]
name = "zome_files"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

zome_delivery_types.workspace = true
zome_delivery_api.workspace = true

zome_files_integrity = {path = "../files_integrity" }
